--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,9 @@
       display: flex;
       flex-direction: column;
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
+      padding-top: 60px; 
+      box-sizing: border-box; 
   }
   .chat-box-header {
       background: #2C50EF;
